--- a/public/layouts/headerEarlyBooking.ejs
+++ b/public/layouts/headerEarlyBooking.ejs
@@ -6,8 +6,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
 <link rel="stylesheet" href="/css/header.css">
 <link rel="stylesheet" href="/css/login.css">
-
-<div id="header">
+<div id="header" style="background-color: #991b1b">
 
     <div class="header-dark">
         <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
@@ -16,7 +15,7 @@
                     <img id="headerLogoImg" src="/images/logoSinFondo2-min.png" />
                 </a>
                 <a href="/" class="navbar-brand">
-                    <p style="padding-left: 15px;" id="companyName"> Naquadriah Software</p>
+                    <p style="padding-left: 15px; color: aliceblue;" id="companyName"> Naquadriah Software</p>
                 </a>
             </div>
             <div class="container">
@@ -26,59 +25,23 @@
                         navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Sobre nosotros</a></li>
-                        <li><a class="nav-link" href="#proyectos">Proyectos </a>
+                        <li><a class="nav-link" href="#actividades">Actividades </a>
                         </li>
-                        <!-- <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown"
-                                aria-expanded="false" href="#">Proyectos </a>
-                            <div class="dropdown-menu" role="menu">
-                                <a class="dropdown-item" role="presentation" href="/notificationApp">NotificationApp</a>
-                                <a class="dropdown-item" role="presentation" href="#">MinimumCircuitLength</a>
-                            </div>
-                        </li> -->
-                        <li><a class="nav-link" href="#equipo">Equipo </a>
+                        <li><a class="nav-link" href="#reservas">Reservas </a>
                         </li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
-                    <a id="botonLogin" class="btn btn-light action-button" role="button"
-                        onclick="document.getElementById('id02').style.display='block'">Ingresar</a>
-                    <h3 id="msgNombreLogueado" style="display:none;">Nombre</h1>
-                        <label class="logoutLblPos">
-                            <input name="submit2" type="submit" id="botonLogout" value="Salir"
-                                class="btn btn-light action-button" onclick="logOut()">
-                        </label>
+                    <ul class="navbar-nav ml-lg-auto">
+                        <h3 id="msgNombreLogueadoEarlyHeader" style="display:none; color:white">Nombre</h3>
+                        <button id="closeSesionButton" onclick="cerrarSesion()" style="background: url(/images/cerrar-sesion.png) no-repeat;
+                        float: left;
+                        width: 10px;
+                        height: 20px;
+                        background-size: cover;"></button>
+
+                    </ul>
                 </div>
             </div>
         </nav>
 
     </div>
 </div>
-
-<div id="id01" class="modal" style="display:none;">
-
-    <div class="modal-content animate">
-        <div class="imgcontainer">
-            <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                title="Close Modal">&times;</span>
-            <img src="/images/mercadolibre.png" alt="Avatar" class="avatar">
-        </div>
-
-        <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input type="text" id="nameLoginField" placeholder="Enter Username" name="uname" required>
-
-            <label for="psw"><b>Password</b></label>
-            <input type="password" id="passLoginField" placeholder="Enter Password" name="psw" required>
-            <label id="validCredential" style="color: red; display: none;"><b>Usuario/contraseña
-                    incorrectas.</b></label>
-            <label id="validCredentialLastname" style="color: red; display: none;"><b>Su usuario no está habilitado para
-                    usar esta web.</b></label>
-
-            <button onclick="iniciarSesion()">Iniciar sesión</button>
-        </div>
-    </div>
-</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="/js/layout/authentication.js"></script>
