--- a/public/css/header.css
+++ b/public/css/header.css
@@ -172,3 +172,16 @@
 #msgNombreLogueadoEarlyHeader {
   color: red;
 }
+
+@font-face {
+  font-family: 'Blanka';
+  src: url('../font/Blanka-Regular.woff2') format('woff2'),
+    url('../font/Blanka-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+#companyName {
+  font-family: 'Blanka' !important;
+}
