--- a/public/pages/earlyBookingApp.ejs
+++ b/public/pages/earlyBookingApp.ejs
@@ -36,10 +36,10 @@
     border-block-color: rgb(212, 71, 71);">
       <div id="loginContainer" style="padding: 10%;">
         <div class="container">
-          <label for="uname"><b>Username</b></label>
+          <label for="uname"><b style="background-color: white;border-radius: 10px;padding: 5px;">Username</b></label>
           <input type="text" id="nameLoginField" placeholder="Enter Username" name="uname" required>
 
-          <label for="psw"><b>Password</b></label>
+          <label for="psw"><b style="background-color: white;border-radius: 10px;padding: 5px;">Password</b></label>
           <input type="password" id="passLoginField" placeholder="Enter Password" name="psw" required>
           <label id="validCredential" style="color: red; display: none;"><b>Usuario/contraseña
               incorrectas.</b></label>
