--- a/public/layouts/headerEarlyBooking.ejs
+++ b/public/layouts/headerEarlyBooking.ejs
@@ -23,7 +23,7 @@
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span
                         class="sr-only">Toggle
                         navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
+                <div class="collapse navbar-collapse" id="navcol-1" style="background-color: #991b1b;">
                     <ul class="nav navbar-nav">
                         <li><a class="nav-link" href="#actividades">Actividades </a>
                         </li>
@@ -45,3 +45,6 @@
 
     </div>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
